--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
-<!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
-<script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
-<script type="text/javascript">
-MRP.insert({
-'url':'http://over2station.shyndard.net:8000/live.mp3',
-'codec':'mp3',
-'volume':100,
-'autoplay':true,
-'jsevents':true,
-'buffering':0,
-'title':'Over2Station',
-'wmode':'transparent',
-'skin':'mcclean',
-'width':180,
-'height':60
-});
-</script>
-<!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
+<style>
+    body {
+        background-color: #ffc4a3;
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        font-family: 'Merriweather Sans', sans-serif;
+    }
+
+
+
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+</style>
+
+<body style="background-color:#000000;">
+    <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
+    <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
+    <script type="text/javascript">
+        MRP.insert({
+            'url': 'http://over2station.shyndard.net:8000/live.mp3',
+            'codec': 'mp3',
+            'volume': 100,
+            'autoplay': true,
+            'jsevents': true,
+            'buffering': 0,
+            'title': 'Over2Station',
+            'wmode': 'transparent',
+            'skin': 'mcclean',
+            'width': 180,
+            'height': 60
+        });
+    </script>
+    <!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
+</body>
