--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
     <script type="text/javascript">
         MRP.insert({
-            'url': 'http://over2station.shyndard.net:8000/live.mp3',
+            'url': 'https://over2station.shyndard.eu/live.mp3',
             'codec': 'mp3',
             'volume': 100,
             'autoplay': true,
