--- a/index.html
+++ b/index.html
@@ -1,3 +1,46 @@
+<script>
+    const STATUS_URL = "http://over2station.shyndard.net/status-json.xsl";
+    const DEFAULT_DESCRIPTION = "Aucune émission en cours";
+
+    function get(url) {
+        const xmlhttp = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject("Microsoft.XMLHTTP")
+
+        xmlhttp.onreadystatechange = function () {
+            if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                return xmlhttp.responseText;
+            }
+        }
+        xmlhttp.open("GET", url, false);
+        xmlhttp.send();
+
+        return xmlhttp;
+    }
+
+    function updateDescription() {
+        const resultRequest = get(STATUS_URL)
+        let description = DEFAULT_DESCRIPTION
+
+        if (resultRequest.status == 200 && resultRequest.response) {
+            jsonData = JSON.parse(resultRequest.response)
+            if (jsonData && jsonData["icestats"] && jsonData["icestats"]["source"]) {
+                const sources = jsonData["icestats"]["source"]
+                description = Array.isArray(sources) ? sources[0].server_description : sources.server_description
+            }
+        }
+        console.log(description)
+        document.getElementById("description").innerHTML = description;
+    }
+
+    window.setInterval(function () {
+        updateDescription()
+    }, 60000);
+
+
+    window.onload = function () {
+        updateDescription()
+    };
+
+</script>
 <style>
     body {
         background-color: #ffc4a3;
@@ -5,9 +48,8 @@
         justify-content: center;
         margin-top: 50px;
         font-family: 'Merriweather Sans', sans-serif;
+        color: white;
     }
-
-
 
     * {
         padding: 0;
@@ -17,8 +59,7 @@
 </style>
 
 <body style="background-color:#000000;">
-    <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
-    <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
+    <script type="text/javascript" src="mrp.js"></script>
     <script type="text/javascript">
         MRP.insert({
             'url': 'https://over2station.shyndard.eu/live.mp3',
@@ -34,5 +75,6 @@
             'height': 60
         });
     </script>
-    <!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
+    <hr />
+    <h2 id="description"></h2>
 </body>
