--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-    const STATUS_URL = "http://over2station.shyndard.net/status-json.xsl";
+    const STATUS_URL = "https://over2station.shyndard.eu/status-json.xsl";
     const DEFAULT_DESCRIPTION = "Aucune émission en cours";
 
     function get(url) {
@@ -27,7 +27,6 @@
                 description = Array.isArray(sources) ? sources[0].server_description : sources.server_description
             }
         }
-        console.log(description)
         document.getElementById("description").innerHTML = description;
     }
 
@@ -75,6 +74,6 @@
             'height': 60
         });
     </script>
-    <hr />
+    <br/><br/>
     <h2 id="description"></h2>
 </body>
