Clean code + create files

--- a/index.html
+++ b/index.html
@@ -3,84 +3,17 @@
 
 <head>
     <title>Over2Station</title>
-    <script>
-        const STATUS_URL = "https://over2station.shyndard.eu/status-json.xsl";
-        const DEFAULT_DESCRIPTION = "Aucune émission en cours";
-
-        function get(url) {
-            const xmlhttp = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject("Microsoft.XMLHTTP")
-
-            xmlhttp.onreadystatechange = function () {
-                if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                    return xmlhttp.responseText;
-                }
-            }
-            xmlhttp.open("GET", url, false);
-            xmlhttp.send();
-
-            return xmlhttp;
-        }
-
-        function updateDescription() {
-            const resultRequest = get(STATUS_URL)
-            let description = DEFAULT_DESCRIPTION
-
-            if (resultRequest.status == 200 && resultRequest.response) {
-                jsonData = JSON.parse(resultRequest.response)
-                if (jsonData && jsonData["icestats"] && jsonData["icestats"]["source"]) {
-                    const sources = jsonData["icestats"]["source"]
-                    description = Array.isArray(sources) ? sources[0].server_name : sources.server_name
-                }
-            }
-            document.getElementById("description").textContent = description;
-            document.title = description + " - Over2Station";
-        }
-
-        window.setInterval(function () {
-            updateDescription()
-        }, 60000);
-
-
-        window.onload = function () {
-            updateDescription()
-        };
-
-    </script>
-    <style>
-        body {
-            background-color: #ffc4a3;
-            display: flex;
-            justify-content: center;
-            margin-top: 50px;
-            font-family: 'Merriweather Sans', sans-serif;
-            color: white;
-        }
-
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
-        div {
-            margin: 10px;
-        }
-
-        .wrapper {
-            position: relative;
-        }
-    </style>
+    <script type="text/javascript" src="mrp.js"></script>
+    <script type="text/javascript" src="o2s.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-color:#000000;">
-
-
+<body>
     <div class="wrapper">
         <div>
             <h2 id="description"></h2>
         </div>
         <div>
-            <script type="text/javascript" src="mrp.js"></script>
             <script type="text/javascript">
                 MRP.insert({
                     'url': 'https://over2station.shyndard.eu/live.mp3',
