--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             <script type="text/javascript">
                 MRP.insert({
-                    'url': 'https://o2s.shyndard.eu/live.mp3',
+                    'url': 'https://over2station.shyndard.eu/live.mp3',
                     'codec': 'mp3',
                     'volume': 100,
                     'autoplay': true,
